--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,12 @@
 html, body {
 	width: 100%;
 	height: 100%;
+	font-family: lato;
 }
 
 body {
-	padding: 10px;
+	text-align: center;
+	background-color: #00CCCC; 
 }
 
 table {
@@ -22,9 +24,21 @@ td {
 	background-color: blue;
 }
 
+body > div {
+	position: relative;
+	display: inline;
+}
+
 img {
-	position: absolute;
+	position: relative;
 	top: 0px;
 	left: 0px;
-	width: 100%;
+	height: 100%;
+}
+
+h1 {
+	position: absolute;
+	left: 0px;
+	right: 0px;
+	z-index: 1;
 }
