--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,3 +1,19 @@
+.light-bg {
+	background-color: #C2DFA6;
+}
+
+.dark-bg {
+	background-color: #118C4E;
+}
+
+.orange-bg {
+	background-color: #F68F1E;
+}
+
+.grey-bg {
+	background-color: #585858
+}
+
 html, body {
 	width: 100%;
 	height: 100%;
@@ -66,7 +82,6 @@ body {
 }
 
 #home .navbar {
-	background-color: #8CC86B;
 	color: black;
 	font-size: 14pt;
 }
@@ -78,6 +93,26 @@ body {
 #home .navbar ul.nav {
 	float: right;
 }
+
+#home-desc {
+	color: white;
+	font-size: 20pt;
+	text-align: center;
+}
+
+#home button {
+	color: white;
+	font-size: 18pt;
+	border: 2px solid white;
+	border-radius: 3px;
+	transition: .2s background-color;
+}
+
+#home button:hover {
+	color: #585858;
+	background-color: white;
+}
+
 /*HOME PAGE*/
 
 #holdingPage {
