So many things. working on Signup and switching to ClearDB MySQL

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,6 +11,9 @@
 
 	</head>
 <body>
+<%= include ../partials/modal-login %>
+<%= include ../partials/modal-signup %>
+
 <div id="home" class="container-fluid">
     <nav class="navbar navbar-default light-bg">
         <% include ../partials/nav %>
@@ -31,7 +34,7 @@
             </div>
         </div>
     </div>
-    
+
     <div id="home-info-section">
         <div class="row">
             <div class="col-xs-3">
@@ -61,5 +64,6 @@
         </div>
     </div>
 </div>
+
 </body>
 </html>
