--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Coordinate</title>
+<title>Coordinate - <%= page_title %></title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
 <link rel="icon" href="assets/images/logoSmall.png" type="image/png">
@@ -14,4 +14,7 @@
 
 <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 <link href='packages/bootstrap/bootstrap.min.css' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="packages/font-awesome/css/font-awesome.min.css">
+<link href="packages/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+
+<!-- my general -->
+<script type="text/javascript" src="js/general.js"></script>
