session storage working. Thank You Sean

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,7 +15,7 @@
 <%= include ../partials/modal-signup %>
 
 <div id="home" class="container-fluid">
-    <nav class="navbar navbar-default light-bg">
+    <nav id="nav" class="navbar navbar-default light-bg">
         <% include ../partials/nav %>
     </nav>
     
