--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -19,6 +19,7 @@
             <li><a href="#">Help</a></li> -->
             <% if (locals.username) { %>
                 <li><a id="username-holder" href="#"><%= locals.username %></a></li>
+                <li><a id="logout-button" href="#">Logout</a></li>
             <% } else { %>
                 <li><a id="login-button" href="#">Login</a></li>
                 <li><a id="signup-button" href="#">Signup</a></li>
