--- a/views/pages/availability.ejs
+++ b/views/pages/availability.ejs
@@ -17,8 +17,8 @@
 
     <div id="availability-content" class="col-xs-8 col-xs-offset-2">
         <div class="row">
-            <h1 id="availability-name" class="col-xs-12">Event Name Here</h1>
-            <p id="availability-descr" class="col-xs-12 lead">Event Description Here</p>
+            <h1 id="availability-name" class="col-xs-12"><%= locals.event_name %></h1>
+            <p id="availability-descr" class="col-xs-12 lead"><%= locals.event_desc  %></p>
         </div>
         <div class="row">
             <h3 class="col-xs-12">
