--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,7 +10,9 @@
 <!-- Linked Scripts -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
 <script type="text/javascript" src="packages/bootstrap/bootstrap.min.js"></script>
-<script type="text/javascript" src="packages/js-cookie.js"></script>
+<!-- <script src="packages/moment/moment.js"></script>
+<script src="packages/fullcalendar-2.3.1/fullcalendar.js"></script>  -->
+<!-- <script type="text/javascript" src="packages/js-cookie.js"></script> -->
 
 <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 <link href='packages/bootstrap/bootstrap.min.css' rel='stylesheet' type='text/css'>
