--- a/views/pages/event_create.ejs
+++ b/views/pages/event_create.ejs
@@ -44,15 +44,16 @@
                     <div class="form-group col-xs-12">
                         <label class="input-label">What times can the event occur?</label>
                         <div class="form-inline">
+                            No earlier than 
                             <input type="time" name="event-time-from" class="form-control" value="" required="" title="">
-                            to 
+                            to no later than
                             <input type="time" name="event-time-to" class="form-control" value="" required="" title="">
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-xs-12">
-                        <label class="input-label">What is the events length?</label>
+                        <label class="input-label">How long will the event be?</label>
                         <div class="form-inline">
                             <select id="event-length" name="event-length" class="form-control">
                                 <option value="1" selected="selected">1</option>
