times on availability loading properly. Data attached to each element. Need to store selected data in DB

--- a/views/pages/event_create.ejs
+++ b/views/pages/event_create.ejs
@@ -44,9 +44,18 @@
                     <div class="form-group col-xs-12">
                         <label class="input-label">What times can the event occur?</label>
                         <div class="form-inline">
-                            <input type="time" name="event-time-from" class="form-control" value="" required="" title="">
+                            <!-- <div class="input-append bootstrap-timepicker">
+                                <input id="timepicker-from" type="text" class="input-small">
+                                <span class="add-on"><i class="icon-time"></i></span>
+                            </div>
+                            to
+                            <div class="input-append bootstrap-timepicker">
+                                <input id="timepicker-to" type="text" class="input-small">
+                                <span class="add-on"><i class="icon-time"></i></span>
+                            </div> -->
+                            <input type="time" name="event-time-from" class="form-control" value="" required="required" title="">
                             to 
-                            <input type="time" name="event-time-to" class="form-control" value="" required="" title="">
+                            <input type="time" name="event-time-to" class="form-control" value="" required="required" title="">
                         </div>
                     </div>
                 </div>
