--- a/views/pages/availability.ejs
+++ b/views/pages/availability.ejs
@@ -2,6 +2,9 @@
 <html>
     <head>
         <% include ../partials/head %>
+
+        <script src="packages/moment/moment.js"></script>
+
 		<!-- My Scripts -->
 		<script type="text/javascript" src="js/availability.js"></script>
 
@@ -46,7 +49,7 @@
                 </div>
             </div>
             <div class="col-xs-12">
-                <button id="availability-submit" type="submit" class="btn btn-default btn-lg pull-right orange-bg">Create Event</button>
+                <button id="availability-submit" type="submit" class="btn btn-default btn-lg pull-right orange-bg">Submit Availability</button>
             </div>
         </div>
     </div>
