--- a/views/partials/modal-login.ejs
+++ b/views/partials/modal-login.ejs
@@ -12,7 +12,7 @@
 					        <input class="form-control" type="email" name="user-email" placeholder="email" required="required" title="">
 					    </div>
 					    <div class="form-group">   
-					        <input class="form-control" type="text" name="user-pass" placeholder="password" required="required">
+					        <input class="form-control" type="password" name="user-pass" placeholder="password" required="required">
 					    </div>
 					</form>
 				</div>
