--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-icon" href="#">
+        <a class="navbar-icon" href="/">
             <img src="assets/images/logo.png" />
         </a>
     </div>
