--- a/views/pages/event_review.ejs
+++ b/views/pages/event_review.ejs
@@ -28,34 +28,38 @@
             <div id="eventLength" class="col-xs-12">Length of Event: <b><%= locals.event_length  %> hour(s)</b></div>
             <div id="availFrom" class="col-xs-12">Available from: <b><%= locals.event_start_date  %> - <%= locals.event_end_date  %></b></div>
         </div>
-        <div id="offeredTimesContainer" class="row">
-            <h3 class="col-xs-12">Top 3 Results</h3>
-            <p class="col-xs-12">Select best time for your event form top results and Coordinate will notify participants of the event time.</p>
-            <div class="col-xs-6 col-xs-offset-3 timeOption">
-                <div class="col-xs-2">Tue 17</div>
-                <div class="col-xs-10">
-                    <div class="col-xs-12">9:00AM TO 10:00AM</div>
-                    <div class="col-xs-12">All Participants Available</div>
+        <% if (locals.userID == locals.event_creator_id) { %>
+            <div id="offeredTimesContainer" class="row">
+                <h3 class="col-xs-12">Top 3 Results</h3>
+                <p class="col-xs-12">
+                    Select best time for your event form top results and Coordinate will notify participants of the event time.
+                </p>
+                <div class="col-xs-6 col-xs-offset-3 timeOption">
+                    <div class="col-xs-2">Tue 17</div>
+                    <div class="col-xs-10">
+                        <div class="col-xs-12">9:00AM TO 10:00AM</div>
+                        <div class="col-xs-12">All Participants Available</div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-xs-offset-3 timeOption">
+                    <div class="col-xs-2">Wed 18</div>
+                    <div class="col-xs-10">
+                        <div class="col-xs-12">11:30AM TO 12:00PM</div>
+                        <div class="col-xs-12">All Participants Available</div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-xs-offset-3 timeOption">
+                    <div class="col-xs-2">Wed 18</div>
+                    <div class="col-xs-10">
+                        <div class="col-xs-12">1:00PM TO 2:00PM</div>
+                        <div class="col-xs-12">Most Participants Available</div>
+                    </div>
+                </div>
+                <div class="col-xs-12">
+                    <button id="sendInvite" type="button" class="btn btn-default orange-bg pull-right">Send Invite</button>
                 </div>
             </div>
-            <div class="col-xs-6 col-xs-offset-3 timeOption">
-                <div class="col-xs-2">Wed 18</div>
-                <div class="col-xs-10">
-                    <div class="col-xs-12">11:30AM TO 12:00PM</div>
-                    <div class="col-xs-12">All Participants Available</div>
-                </div>
-            </div>
-            <div class="col-xs-6 col-xs-offset-3 timeOption">
-                <div class="col-xs-2">Wed 18</div>
-                <div class="col-xs-10">
-                    <div class="col-xs-12">1:00PM TO 2:00PM</div>
-                    <div class="col-xs-12">Most Participants Available</div>
-                </div>
-            </div>
-            <div class="col-xs-12">
-                <button id="sendInvite" type="button" class="btn btn-default orange-bg pull-right">Send Invite</button>
-            </div>
-        </div>
+        <% } %>
         <div class="row">
             <div id="review-times" class="col-xs-12">
                 <div>
