added alert for not logged in

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,6 +2,7 @@
 <html>
     <head>
         <% include ../partials/head %>
+        <script type="text/javascript" src="packages/jquery-cookie.js"></script>
 
 		<!-- My Scripts -->
 		<script type="text/javascript" src="js/home.js"></script>
@@ -13,6 +14,7 @@
 <body>
 <%= include ../partials/modal-login %>
 <%= include ../partials/modal-signup %>
+<%= include ../partials/modal-loginalert %>
 
 <div id="home" class="container-fluid">
     <nav id="nav" class="navbar navbar-default light-bg">
