--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -21,8 +21,8 @@
                 <li><a id="username-holder" href="#"><%= locals.username %></a></li>
                 <li><a id="logout-button" href="#">Logout</a></li>
             <% } else { %>
-                <li><a id="login-button" href="#">Login</a></li>
-                <li><a id="signup-button" href="#">Signup</a></li>
+                <li><a class="login-button" href="#">Login</a></li>
+                <li><a class="signup-button" href="#">Signup</a></li>
             <% }  %>
         </ul>
     </div>
