--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
         </button>
         <a class="navbar-icon" href="/">
-            <img src="assets/images/logo.png" />
+            <img src="assets/images/logo_resized_small.png" />
         </a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
