working on favicon

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,11 +4,12 @@
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
 <link rel="icon" href="assets/images/logoSmall.png" type="image/png">
-<link rel="shortcut icon" href="assets/images/logoSmall.png" type="image/png" />
+<link rel="shortcut icon" href="assets/images/logoSmall.png?v=2" type="image/png" />
 
 		
 <!-- Linked Scripts -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="packages/jquery-cookie.js"></script> 
 <script type="text/javascript" src="packages/bootstrap/bootstrap.min.js"></script>
 <!-- <script type="text/javascript" src="packages/timepicker/bootstrap-timepicker.js"></script> -->
 <!-- <script src="packages/moment/moment.js"></script>
