Almost getting names to appear on hovering. Haven't tested multiple users. Still showing an undefined on hover

--- a/views/partials/modal-login.ejs
+++ b/views/partials/modal-login.ejs
@@ -14,12 +14,12 @@
 					    <div class="form-group">   
 					        <input class="form-control" type="password" name="user-pass" placeholder="password" required="required">
 					    </div>
+					    <div class="pull-right">
+						    <button type="button" class="modal-cancel btn btn-default" data-dismiss="modal">Cancel</button>
+						    <button id="login-submit" type="button" class="btn btn-primary">Login</button>
+						</div>
 					</form>
 				</div>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-				<button id="login-submit" type="button" class="btn btn-primary">Login</button>
 			</div>
 		</div>
 	</div>
