touchups and added the share-link modal

--- a/views/pages/availability.ejs
+++ b/views/pages/availability.ejs
@@ -18,10 +18,15 @@
         <% include ../partials/nav %>
     </nav>
 
-    <div id="availability-content" class="col-xs-8 col-xs-offset-2">
+    <div id="availability-content" class="col-xs-10 col-xs-offset-1">
         <div class="row">
             <h1 id="availability-name" class="col-xs-12"><%= locals.event_name %></h1>
             <p id="availability-descr" class="col-xs-12 lead"><%= locals.event_desc  %></p>
+        </div>
+        <div id="availability-event-details" class="event-details row">
+            <div id="eventCreator" class="col-xs-12">Event Creator: <b><%= locals.event_creator_fname + " " + locals.event_creator_lname %></b></div>
+            <div id="eventLength" class="col-xs-12">Length of Event: <b><%= locals.event_length  %> hour(s)</b></div>
+            <div id="availFrom" class="col-xs-12">Dates: <b><%= locals.event_start_date  %> - <%= locals.event_end_date  %></b></div>
         </div>
         <div class="row">
             <h3 class="col-xs-12">
@@ -29,8 +34,8 @@
             </h3>
             <div id="availability-preference" class="col-xs-12">
                 Select preference:
-                <button id="btn-available" class="btn btn-default dark-bg">Preferred</button>
-                <button id="btn-not-preferred" class="btn btn-default light-bg">Not Preferred</button>
+                <button id="btn-available" class="btn btn-default preferenceClicked">Preferred</button>
+                <button id="btn-not-preferred" class="btn btn-default">Not Preferred</button>
             </div>
         </div>
         <div class="row">
