--- a/views/pages/event_create.ejs
+++ b/views/pages/event_create.ejs
@@ -22,7 +22,7 @@
         <% include ../partials/nav %>
     </nav>
 
-    <div id="event-content" class="col-xs-8 col-xs-offset-2">
+    <div id="event-content" class="col-xs-10 col-xs-offset-1">
         <div class="event-inputs row">
             <form id="event-details" class="col-xs-12">
                 <div class="form-group">
@@ -34,7 +34,7 @@
             </form>
         </div>
         <div id="event-calendar" class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-10 col-xs-offset-1">
                 <div id="month-calendar"></div>
             </div>
         </div>
