--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -36,7 +36,8 @@
         </div>
     </div>
 
-    <div id="home-info-section">
+    <div id="home-info-section" class="no-select">
+        <div id="home-info-cover">Click to start creating</div>
         <div class="row">
             <div class="col-xs-3">
                 <div class="info-items">
