--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,24 +1,28 @@
 .light-bg {
     background-color: #c2dfa6;
+    transition: background-color .2s;
 }
 
 .dark-bg {
     background-color: #118c4e;
+    transition: background-color .2s;
 }
 
 .orange-bg {
     background-color: #f68f1e;
+    transition: background-color .2s;
+}
+button.orange-bg:hover {
+    background-color: #FF8500;
+}
+button.orange-bg:active {
+    background-color: #FF8500;
 }
 
 .grey-bg {
     background-color: #585858;
 }
 
-#movie-holder {
-    width: 854px;
-    height: 510px;
-    margin: 0px auto;
-}
 
 /*General Items*/
 
@@ -34,6 +38,7 @@ body {
 
 body > .container-fluid {
     padding: 10px 40px;
+    max-width: 1920px;
 }
 
 h3 {
@@ -43,6 +48,15 @@ h3 {
 .fc-highlight {
     background-color: #118c4e;
     opacity: .5;
+}
+
+.no-select {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 /*General Items*/
@@ -98,12 +112,39 @@ h3 {
     background-color: white;
 }
 
+#home-info-section {
+    position: relative;
+    cursor: pointer;
+}
+#home-info-section #home-info-cover {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    background-color: #118c4e;
+    opacity: 0;
+    border-radius: 3px;
+    color: white;
+    text-align: center;
+    font-size: 30pt;
+    transition: opacity .2s;
+    z-index: 10;
+}
+#home-info-section:hover #home-info-cover {
+    opacity: .7;
+}
+
 #home-info-section .info-items {
     text-align: center;
     font-size: 20pt;
     padding: 20px 0px;
+    color: #c2dfa6;
+    border-radius: 5px;
+    border: 3px solid #c2dfa6;
 }
-#home-info-section .row > div:nth-child(1) .info-items {
+#home-info-section .info-items i {
+    font-size: 80pt;
+}
+/*#home-info-section .row > div:nth-child(1) .info-items {
     background-color: #cbdfa8;
 }
 #home-info-section .row > div:nth-child(2) .info-items {
@@ -114,14 +155,9 @@ h3 {
 }
 #home-info-section .row > div:nth-child(4) .info-items {
     background-color: #118c4e;
-}
+}*/
 
-#home-info-section .info-items {
-    border-radius: 5px;
-}
-#home-info-section .info-items i {
-    font-size: 80pt;
-}
+
 
 /*HOME PAGE*/
 
@@ -157,6 +193,25 @@ h3 {
 
 #availability #availability-preference {
     text-align: center;
+}
+#availability  #btn-available, #availability  #btn-not-preferred  {
+     border: 3px solid grey;
+     highlight: none;
+     transition: border .2s, background-color .2s;
+}
+#availability  #btn-available:hover, #availability #btn-available.preferenceClicked {
+     border: 3px solid #118c4e;
+     background-color: #118c4e;
+     color: white;
+}
+#availability  #btn-not-preferred:hover, #availability #btn-not-preferred.preferenceClicked {
+    border: 3px solid #c2dfa6;
+    background-color: #c2dfa6;
+}
+
+
+#availability-submit {
+    margin-bottom: 10px;
 }
 
 /*AVAILABILITY PAGE - END*/
@@ -208,11 +263,11 @@ h3 {
 
 }*/
 
-#offeredTimesContainer:after, #review #review-event-details:after {
-    width: 80%;
+#offeredTimesContainer:after, .event-details:after {
+    width: 90%;
     border-bottom: 1px solid grey;
     margin: 0 auto;
-    padding-bottom: 20px;
+    padding-bottom: 50px;
 }
 
 .timeOption { 
@@ -225,13 +280,6 @@ h3 {
 }
 
 .timeOption:hover {
-    background-color: #c2dfa6;
-}
-
-#sendInvite {
-    font-size: 16pt;
-}
-#sendInvite:hover {
     background-color: #c2dfa6;
 }
 
@@ -252,6 +300,10 @@ h3 {
 
 .time-names-hover > #time-names-total {
     font-weight: bold;
+}
+
+#modal-share #share-add-holder {
+    text-align: right;
 }
 
 /* REVIEW PAGE - END */
