--- a/views/pages/event_review.ejs
+++ b/views/pages/event_review.ejs
@@ -13,54 +13,65 @@
 
 	</head>
 <body>
+<%= include ../partials/modal-share %>
+
 <div id="review" class="container-fluid">
     <nav class="navbar navbar-default light-bg">
         <% include ../partials/nav %>
     </nav>
 
-    <div id="review-content" class="col-xs-8 col-xs-offset-2">
+    <div id="review-content" class="col-xs-10 col-xs-offset-1">
         <div class="row">
             <h1 id="review-name" class="col-xs-12"><%= locals.event_name %></h1>
             <p id="review-descr" class="col-xs-12 lead"><%= locals.event_desc  %></p>
         </div>
-        <div id="review-event-details" class="row">
+        <div id="review-event-details" class="event-details row">
             <div id="eventCreator" class="col-xs-12">Event Creator: <b><%= locals.event_creator_fname + " " + locals.event_creator_lname %></b></div>
             <div id="eventLength" class="col-xs-12">Length of Event: <b><%= locals.event_length  %> hour(s)</b></div>
-            <div id="availFrom" class="col-xs-12">Available: <b><%= locals.event_start_date  %> - <%= locals.event_end_date  %></b></div>
+            <div id="availFrom" class="col-xs-12">Dates: <b><%= locals.event_start_date  %> - <%= locals.event_end_date  %></b></div>
+            <div class="col-xs-12">
+                <button id="send-invite" type="button" class="btn btn-lg orange-bg pull-right">Share Link</button>
+            </div>
         </div>
-        <% if (locals.userID == locals.event_creator_id) { %>
-            <div id="offeredTimesContainer" class="row">
-                <h3 class="col-xs-12">Recommended Event Times</h3>
-                <p class="col-xs-12">
-                    Select best time for your event form top results and Coordinate will notify participants of the event time.
-                </p>
-                <div class="col-xs-6 col-xs-offset-3 timeOption">
-                    <div class="col-xs-2">Tue 17</div>
-                    <div class="col-xs-10">
-                        <div class="col-xs-12">9:00AM TO 10:00AM</div>
-                        <div class="col-xs-12">All Participants Available</div>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-xs-offset-3 timeOption">
-                    <div class="col-xs-2">Wed 18</div>
-                    <div class="col-xs-10">
-                        <div class="col-xs-12">11:30AM TO 12:00PM</div>
-                        <div class="col-xs-12">All Participants Available</div>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-xs-offset-3 timeOption">
-                    <div class="col-xs-2">Wed 18</div>
-                    <div class="col-xs-10">
-                        <div class="col-xs-12">1:00PM TO 2:00PM</div>
-                        <div class="col-xs-12">Most Participants Available</div>
-                    </div>
-                </div>
-                <div class="col-xs-12">
-                    <button id="sendInvite" type="button" class="btn btn-default orange-bg pull-right">Schedule Event</button>
+    <% if (locals.userID == locals.event_creator_id) { %>
+
+        <div id="offeredTimesContainer" class="row">
+            <h3 class="col-xs-12">Recommended Event Times</h3>
+            <p class="col-xs-12">
+                Select best time for your event form top results and Coordinate will notify participants of the event time.
+            </p>
+            <div class="col-xs-6 col-xs-offset-3 timeOption">
+                <div class="col-xs-2">Tue 17</div>
+                <div class="col-xs-10">
+                    <div class="col-xs-12">9:00AM TO 10:00AM</div>
+                    <div class="col-xs-12">All Participants Available</div>
                 </div>
             </div>
-        <% } %>
+            <div class="col-xs-6 col-xs-offset-3 timeOption">
+                <div class="col-xs-2">Wed 18</div>
+                <div class="col-xs-10">
+                    <div class="col-xs-12">11:30AM TO 12:00PM</div>
+                    <div class="col-xs-12">All Participants Available</div>
+                </div>
+            </div>
+            <div class="col-xs-6 col-xs-offset-3 timeOption">
+                <div class="col-xs-2">Wed 18</div>
+                <div class="col-xs-10">
+                    <div class="col-xs-12">1:00PM TO 2:00PM</div>
+                    <div class="col-xs-12">Most Participants Available</div>
+                </div>
+            </div>
+            <div class="col-xs-12">
+                <button id="sendInvite" type="button" class="btn btn-default btn-lg orange-bg pull-right">Schedule Event</button>
+            </div>
+        </div>
+
+    <% } %>
         <div class="row">
+            <h3 class="col-xs-12">Precision Availability</h3>
+            <p class="col-xs-12">
+                Hover over a time to see who is available.
+            </p>
             <div id="review-times" class="col-xs-12">
                 <div>
                     <table id="dataTable" cellpadding="0" cellspacing="0">
