--- a/views/pages/event_create.ejs
+++ b/views/pages/event_create.ejs
@@ -29,7 +29,7 @@
                     <input class="form-control input-lg" type="text" name="event-name" placeholder="Event Name" required="required" title="">
                 </div>
                 <div class="form-group">   
-                    <textarea name="event-descr" class="form-control" placeholder="Even Description" rows="3"></textarea>
+                    <textarea name="event-descr" class="form-control" placeholder="Event Description" rows="3"></textarea>
                 </div>
             </form>
         </div>
