fixed time issues with not adjusting properly with the half hours

--- a/views/pages/event_create.ejs
+++ b/views/pages/event_create.ejs
@@ -56,11 +56,12 @@
                         <label class="input-label">How long will the event be?</label>
                         <div class="form-inline">
                             <select id="event-length" name="event-length" class="form-control">
-                                <option value="1" selected="selected">1</option>
+                                <option value=".5" selected="selected">.5</option>
+                                <option value="1">1</option>
+                                <option value="1.5">1.5</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
                                 <option value="4">4</option>
-                                <option value="5">5</option>
                             </select>
                             Hour(s)
                         </div>
